# MoZukuRust

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
mozuku-lsp/src/: mecab_manager.cpp
mozuku-rs/: Cargo.toml  README.md  mozuku.toml.example
mozuku-rs/src/: analyzer.rs  checker.rs  config.rs  extractor.rs  lib.rs  llm.rs  main.rs  server.rs
vscode-mozuku/: package.json
vscode-mozuku/src/: client.ts
