[package]
name = "mozuku-rs"
version = "0.1.0"
edition = "2021"
description = "Japanese proofreading Language Server with LLM integration"
license = "MIT"
repository = "https://github.com/clearclown/MoZukuRust"

[dependencies]
# LSP Framework
tower-lsp = "0.20"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Japanese Morphological Analysis
lindera = { version = "1.4", features = ["embedded-ipadic"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Configuration
toml = "0.8"
directories = "5"

# HTTP Client for LLM API
reqwest = { version = "0.12", features = ["json"] }

# Unicode Handling
unicode-segmentation = "1"

# Tree-sitter for document parsing
tree-sitter = "0.24"
tree-sitter-md = "0.3"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
# tree-sitter-latex = "0.1"  # Disabled due to linker issues

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
